package com.michalkubiak.command;

public interface Command {
    void execute();
}
