package com.michalkubiak.command;

public class UserService {

    public void addUser() {
        System.out.println("Add User");
    }
}
